<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    >

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@mipmap/ic_launcher_round"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="86dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputFormConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/input_form_background"
        >

        <TextView
            android:id="@+id/recipeTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="38sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recipeFormConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeTitleTextView"
            >


            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/create_btn_background"
                android:text="@string/btn_save"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@+id/recipeRatingBar"
                app:layout_constraintTop_toBottomOf="@+id/recipeRatingBar"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/recipePrepTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/edit_new_recipe_prep_time"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/recipeRatingTextView"
                app:layout_constraintTop_toBottomOf="@+id/recipeCookingTimeEditText"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/recipeNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_new_recipe_name"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/recipeCookingTimeEditText"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/recipeCookingTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/edit_new_recipe_cooking_time"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/recipePrepTimeEditText"
                app:layout_constraintTop_toBottomOf="@+id/recipeNameEditText"
                tools:layout_editor_absoluteX="16dp" />

            <RatingBar
                android:id="@+id/recipeRatingBar"
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="5"
                android:stepSize="0.1"
                app:layout_constraintBottom_toTopOf="@+id/saveBtn"
                app:layout_constraintTop_toBottomOf="@+id/recipeRatingTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">


            </RatingBar>

            <TextView
                android:id="@+id/recipeRatingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_new_recipe_rating"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/recipeRatingBar"
                app:layout_constraintTop_toBottomOf="@+id/recipePrepTimeEditText" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredientFormConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/input_form_background">


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>










</androidx.constraintlayout.widget.ConstraintLayout>